<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>clpe_ros_msgs</name>
  <version>0.1.0</version>
  <description>Messages used by clpe_ros</description>
  <maintainer email="none@none.com">None</maintainer>
  <license>Apache License 2.0</license>
  <author>Teo Koon Peng</author>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend condition="$ROS_PYTHON_VERSION == 2">python-setuptools</buildtool_depend>
  <buildtool_depend condition="$ROS_PYTHON_VERSION == 3">python3-setuptools</buildtool_depend>

  <export>
    <architecture_independent/>
  </export>
</package>
